--- a/resources/css/account.css
+++ b/resources/css/account.css
@@ -66,7 +66,7 @@ body {
 
 .upload-button {
     height: 70%;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 1.7em;
     margin-bottom: 1em;
 }
@@ -173,7 +173,7 @@ body {
 }
 
 h1 {
-    font-weight: 100;
+    font-weight: 300;
 }
 
 #completed-courses-header {
@@ -213,4 +213,8 @@ p {
 .tut-aside {
     flex-grow: 1;
     text-align: center;
+}
+
+.modal-title {
+    font-weight: 300;
 }
