--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -102,7 +102,7 @@ h1 {
     width: 8em;
     height: 1.9em;
     font-size: 1.2em;
-    transform: color 1s ease, background-color 1.5s ease;
+    transition: color .5s ease, background-color .5s ease;
     margin-left:0.3em;
     margin-right:0.3em;
     line-height: 1.2em;
@@ -111,6 +111,11 @@ h1 {
 .btn:hover {
     color: #BBDAE0;
     background-color: #13446B;
+}
+
+.btn:active {
+    color: white;
+    background-color: #3472a3;
 }
 
 .confirmation-btns {
@@ -207,12 +212,42 @@ label {
     padding-bottom: 0em;
 }
 
-
-
-input {
-    
-}
-
 .cb {
     margin-right: 1em;
 }
+
+.modal-layout {
+    text-align: center;
+}
+
+.smooth-input {
+    text-align: center;
+    width: 10em;
+    height: 2.5em;
+    margin-bottom: 1em;
+    transition: color 0.5s ease, background-color 0.5s ease, width 0.5s ease;
+    border-radius: .3em;
+    border-color: transparent;
+    background-color: rgba(189, 219, 224, 0.51);
+    border: 1px solid #13446B;
+}
+
+.smooth-input:hover {
+    background-color: rgba(189, 219, 224, 0.3);
+}
+
+.smooth-input:focus {
+    width: 15em;
+    background-color: rgba(189, 219, 224, 0.1);
+}
+::-webkit-input-placeholder { opacity: 1; -webkit-transition: opacity .5s; transition: opacity .5s; }  /* Chrome <=56, Safari < 10 */
+:-moz-placeholder { opacity: 1; -moz-transition: opacity .5s; transition: opacity .5s; } /* FF 4-18 */
+::-moz-placeholder { opacity: 1; -moz-transition: opacity .5s; transition: opacity .5s; } /* FF 19-51 */
+:-ms-input-placeholder { opacity: 1; -ms-transition: opacity .5s; transition: opacity .5s; } /* IE 10+ */
+::placeholder { opacity: 1; transition: opacity .5s; } /* Modern Browsers */
+
+*:focus::-webkit-input-placeholder { opacity: 0; } /* Chrome <=56, Safari < 10 */
+*:focus:-moz-placeholder { opacity: 0; } /* FF 4-18 */
+*:focus::-moz-placeholder { opacity: 0; } /* FF 19-50 */
+*:focus:-ms-input-placeholder { opacity: 0; } /* IE 10+ */
+*:focus::placeholder { opacity: 0; } /* Modern Browsers */
