--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,7 +1,3 @@
-body {
-    font-family: 'Lato', sans-serif;
-    color: #13446B;
-}
 .modal-layout {
     text-align: center;
 }
@@ -38,7 +34,7 @@ body {
 *:focus:-ms-input-placeholder { opacity: 0; } /* IE 10+ */
 *:focus::placeholder { opacity: 0; } /* Modern Browsers */
 
-.login form .btn {
+form .btn {
     border: 1px solid #13446B;
     color: #13446B;
     width: 8em;
@@ -50,12 +46,13 @@ body {
     line-height: 1.2em;
     background-color: white;
 }
-.login form .btn:hover {
+
+form .btn:hover {
     color: #BBDAE0;
     background-color: #13446B;
 }
 
-.login form .btn:active {
+form .btn:active {
     color: white;
     background-color: #3472a3;
 }
@@ -69,16 +66,39 @@ body {
 	color: #C3DFE4;
 	font-weight: 300;
 	font-size: 1.3em;
-	transition: color 1s ease;
+	transition: color 0.5s ease;
 	letter-spacing: 2px;
 }
 
 .nav-link-space {
     margin-right: .7em;
 }
+
 .navbar-dark .navbar-brand {
 	color: #C3DFE4;
 	font-weight: 300;
 	font-size: 2em;
-	transition: color 1s ease;
+	transition: color 0.5s ease;
+}
+
+.navbar-brand:hover, .nav-link:hover {
+	color: #FFFFFF;
+    transition: color 0.5s ease;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+	padding-right: 10px;
+	padding-left:20px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #C3DFE4;
+}
+
+.navbar-light .navbar-brand {
+    color: #C3DFE4;
+}
+
+.navbar-light .navbar-toggler {
+    color: #C3DFE4;
 }
