--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -27,7 +27,7 @@
                 </button>
             </div>
             <div class="modal-body modal-layout">
-                <form id="login" method="post" action="/">
+                <form id="login" method="post" action="/" class="navform">
                     <input class="smooth-input" type="text"  name="uname" placeholder="Username" required><br>
                     <input class="smooth-input" type="password" name="pword" placeholder="Password" required><br>
                     <button type="submit" class="btn">Login</button>
@@ -48,7 +48,7 @@
                 </button>
             </div>
             <div class="modal-body modal-layout">
-                <form id="register" method="post" action="/">
+                <form id="register" method="post" action="/" class="navform">
                     <input class="smooth-input" type="text"  name="uname" placeholder="Username" required> <br>
                     <input class="smooth-input" type="password" name="pword" placeholder="Password" required> <br>
                     <input class="smooth-input" type="password" name="pword-confirm" placeholder="Confirm Password" required> <br>
