fix authentication middleware and css bugs

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -27,9 +27,9 @@
                 </button>
             </div>
             <div class="modal-body modal-layout">
-                <form id="login" method="post" action="/" class="navform">
-                    <input class="smooth-input" type="text"  name="uname" placeholder="Username" required><br>
-                    <input class="smooth-input" type="password" name="pword" placeholder="Password" required><br>
+                <form id="login" method="post" action="/login" class="navform">
+                    <input class="smooth-input" type="text"  name="username" placeholder="Username" required><br>
+                    <input class="smooth-input" type="password" name="password" placeholder="Password" required><br>
                     <button type="submit" class="btn">Login</button>
                 </form>
             </div>
@@ -48,10 +48,10 @@
                 </button>
             </div>
             <div class="modal-body modal-layout">
-                <form id="register" method="post" action="/" class="navform">
-                    <input class="smooth-input" type="text"  name="uname" placeholder="Username" required> <br>
-                    <input class="smooth-input" type="password" name="pword" placeholder="Password" required> <br>
-                    <input class="smooth-input" type="password" name="pword-confirm" placeholder="Confirm Password" required> <br>
+                <form id="register" method="post" action="/register" class="navform">
+                    <input class="smooth-input" type="text"  name="username" placeholder="Username" required> <br>
+                    <input class="smooth-input" type="password" name="password" placeholder="Password" required> <br>
+                    <input class="smooth-input" type="password" name="password-confirm" placeholder="Confirm Password" required> <br>
                     <button type="submit" class="btn">Register</button>
                 </form>
             </div>
