--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <div class="column-left">
             <div class="class-header">
-                <span class="header-text">INTRO TO DATABASE SYSTEMS</span>
+                <span class="header-text"><%= name %></span>
                 <!-- status: open -->
                 <span class="status open">
                   <i class="fas fa-check-circle"></i>
@@ -30,9 +30,9 @@
                 </span>
             </div>
             <div class="class-metadata">
-                <span class="subsubheader-text">Course #:</span><span class="metadata-number course-info-text">37:575:202</span>
-                <span class="subsubheader-text">Core Codes:</span><span class="metadata-number course-info-text">WC, WCr, HST</span>
-                <span class="subsubheader-text">Credits:</span><span class="metadata-number course-info-text">3</span>
+                <span class="subsubheader-text">Course #:</span><span class="metadata-number course-info-text"><%= course_full_number %></span>
+                <span class="subsubheader-text">Core Codes:</span><span class="metadata-number course-info-text"><%= course_codes_string %></span>
+                <span class="subsubheader-text">Credits:</span><span class="metadata-number course-info-text"><%= credits %></span>
             </div>
             <div class="class-prerequisites">
                 <span class="subheader-text">Required Prerequisites</span>
@@ -45,12 +45,7 @@
                 <span class="subheader-text bold">Taught by:</span><span class="subheader-text p-0">Belowich, Alan</span>
             </div>
             <div class="description">
-                <p>quo esse incurreret non cernantur se id tamen ipsum quo eram mentitum a cillum 
-                    iudicem legam elit laboris consequat ea iudicem amet praesentibus nostrud fore 
-                    sint expetendis nostrud nulla reprehenderit id te aute coniunctione exercitation 
-                    fore consequat ea praetermissum ex firmissimum senserit mandaremus ad incurreret 
-                    sint summis elit probant culpa sint exquisitaque coniunctione offendit ea summis 
-                    arbitrantur firmissimum summis arbitror</p>
+                <p><%= notes %></p>
             </div>
             <div class="class-sections table-responsive">
                 <span class="subheader-text bold">Sections</span>
