--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -16,6 +16,7 @@
         <header>
             <% include ../partials/navbar %>
         </header>
+        <% include ../partials/notification %>
         <div class="container-fluid">
             <div class="container border rounded">
                 <h1 id="completed-courses-header">Update Your Completed Courses</h1>
@@ -105,147 +106,12 @@
                         <li>Class 4</li>
                     </ul>
                 </div>
-                <div class="semester">
-                    <h2>Transfer Courses</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>External Examinations</h2>
-                    <ul>
-                        <li>Introduction to Database Systems</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Transfer Courses</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Class 1</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Introduction to Database Systems</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-                <div class="semester">
-                    <h2>Fall 2017</h2>
-                    <ul>
-                        <li>Introduction to Database Systems</li>
-                        <li>Class 2</li>
-                        <li>Class 3</li>
-                        <li>Class 4</li>
-                    </ul>
-                </div>
-            </div>   
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-        <script src="/js/pdf.js"></script>
+        <script src="/js/pdf.min.js"></script>
         <script src="/js/account.js"></script>
     </body>
 
