--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/account">Welcome <%= user %>!</a>
+                    <a class="nav-link" href="/account">Welcome, <%= user %>!</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Log Out</a>
