basic course info

--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -31,18 +31,17 @@
             </div>
             <div class="class-metadata">
                 <span class="subsubheader-text">Course #:</span><span class="metadata-number course-info-text"><%= course_full_number %></span>
-                <span class="subsubheader-text">Core Codes:</span><span class="metadata-number course-info-text"><%= course_codes_string %></span>
+                <span class="subsubheader-text">Core Codes:</span><span class="metadata-number course-info-text"><%= core_codes_string %></span>
                 <span class="subsubheader-text">Credits:</span><span class="metadata-number course-info-text"><%= credits %></span>
             </div>
             <div class="class-prerequisites">
                 <span class="subheader-text">Required Prerequisites</span>
                 <br>
-                <span class="prereqs">DATA STRUCTURES, INTR DISCRET STRCT I, 01:013:240</span>
+                <span class="prereqs"><%= pre_reqs %></span>
             </div>
             <div class="class-description">
                 <span class="subheader-text bold">Description</span>
                 <div class="subheader-text spacer"></div>
-                <span class="subheader-text bold">Taught by:</span><span class="subheader-text p-0">Belowich, Alan</span>
             </div>
             <div class="description">
                 <p><%= notes %></p>
