--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -62,9 +62,10 @@
                 </div>
                 <div class="modal-body modal-layout">
                     <form id="register" method="post" action="/register" class="navform">
+                        <span style="opacity: 0.75">Username can only contain alphanumeric characters</span>
                         <input class="smooth-input" type="text"  name="username" placeholder="Username" required> <br>
                         <input class="smooth-input" type="password" name="password" placeholder="Password" required> <br>
-                        <input class="smooth-input" type="password" name="password-confirm" placeholder="Confirm Password" required> <br>
+                        <input class="smooth-input" type="password" name="passwordConfirm" placeholder="Confirm Password" required> <br>
                         <button type="submit" class="btn">Register</button>
                     </form>
                 </div>
