issues with time field

--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -53,10 +53,9 @@
                         <tr>
                             <th>Sec</th>
                             <th>Index</th>
-                            <th>Day</th>
                             <th>Time</th>
-                            <th>Campus</th>
-                            <th>Room</th>
+                            <th>Location</th>
+                            <th>Instructor</th>
                             <th class="status-header">Status</th>
                         </tr>
                     </thead>
@@ -64,10 +63,9 @@
                         <tr>
                             <td>1</td>
                             <td>12345</td>
-                            <td>Tuesday<br>Wednesday<br>Thursday</td>
-                            <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
-                            <td>CAC<br>CAC<br>CAC</td>
-                            <td>VH-105<br><br>VH-105</td>
+                            <td>Tue 4:45 PM - 5:40 PM<br>Wed 8:25 AM - 9:20 AM<br>Thu 10:45 PM - 10:50 PM</td>
+                            <td>CAC VH-105<br><br>CAC VH-105</td>
+                            <td>Jane Doe</td>
                             <td class="text-center">
                                 <span class="status open sections" data-toggle="tooltip" data-placement="top" title="Class is open! Click to toggle register button & class status">
                                     <i class="fas fa-check-circle class-open"></i>
@@ -78,84 +76,13 @@
                         <tr>
                             <td>2</td>
                             <td>12345</td>
-                            <td>Tuesday<br>Wednesday<br>Thursday</td>
                             <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
-                            <td>CAC<br>CAC<br>CAC</td>
-                            <td>VH-105<br><br>VH-105</td>
+                            <td>CAC VH-105<br><br>CAC VH-105</td>
+                            <td>John Doe</td>
                             <td class="text-center">
                                 <span class="status closed sections" data-toggle="tooltip" data-placement="top" title="Class is closed! Can't register.">
                                     <i class="fas fa-times-circle"></i>
                                 </span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>12345</td>
-                            <td>Tuesday<br>Wednesday<br>Thursday</td>
-                            <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
-                            <td>CAC<br>CAC<br>CAC</td>
-                            <td>VH-105<br><br>VH-105</td>
-                            <td class="text-center">
-                                <span class="status open sections" data-toggle="tooltip" data-placement="top" title="Class is open! Click to toggle register button & class status">
-                                    <i class="fas fa-check-circle class-open"></i>
-                                </span>
-                                <a class="btn btn-primary register-button bold" href="https://google.com" role="button" target="_blank" data-toggle="tooltip" data-placement="top" title="Click to toggle register button & class status">Register</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>12345</td>
-                            <td>Tuesday<br>Wednesday<br>Thursday</td>
-                            <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
-                            <td>CAC<br>CAC<br>CAC</td>
-                            <td>VH-105<br><br>VH-105</td>
-                            <td class="text-center">
-                                <span class="status open sections" data-toggle="tooltip" data-placement="top" title="Class is open! Click to toggle register button & class status">
-                                    <i class="fas fa-check-circle class-open"></i>
-                                </span>
-                                <a class="btn btn-primary register-button bold" href="https://google.com" role="button" target="_blank" data-toggle="tooltip" data-placement="top" title="Click to toggle register button & class status">Register</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>12345</td>
-                            <td>Tuesday<br>Wednesday<br>Thursday</td>
-                            <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
-                            <td>CAC<br>CAC<br>CAC</td>
-                            <td>VH-105<br><br>VH-105</td>
-                            <td class="text-center">
-                                <span class="status open sections" data-toggle="tooltip" data-placement="top" title="Class is open! Click to toggle register button & class status">
-                                    <i class="fas fa-check-circle class-open"></i>
-                                </span>
-                                <a class="btn btn-primary register-button bold" href="https://google.com" role="button" target="_blank" data-toggle="tooltip" data-placement="top" title="Click to toggle register button & class status">Register</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>12345</td>
-                            <td>Tuesday<br>Wednesday<br>Thursday</td>
-                            <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
-                            <td>CAC<br>CAC<br>CAC</td>
-                            <td>VH-105<br><br>VH-105</td>
-                            <td class="text-center">
-                                <span class="status open sections" data-toggle="tooltip" data-placement="top" title="Class is open! Click to toggle register button & class status">
-                                    <i class="fas fa-check-circle class-open"></i>
-                                </span>
-                                <a class="btn btn-primary register-button bold" href="https://google.com" role="button" target="_blank" data-toggle="tooltip" data-placement="top" title="Click to toggle register button & class status">Register</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>12345</td>
-                            <td>Tuesday<br>Wednesday<br>Thursday</td>
-                            <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
-                            <td>CAC<br>CAC<br>CAC</td>
-                            <td>VH-105<br><br>VH-105</td>
-                            <td class="text-center">
-                                <span class="status open sections" data-toggle="tooltip" data-placement="top" title="Class is open! Click to toggle register button & class status">
-                                    <i class="fas fa-check-circle class-open"></i>
-                                </span>
-                                <a class="btn btn-primary register-button bold" href="https://google.com" role="button" target="_blank" data-toggle="tooltip" data-placement="top" title="Click to toggle register button & class status">Register</a>
                             </td>
                         </tr>
                     </tbody>
