added function to format times

--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -53,7 +53,7 @@
                         <tr>
                             <th>Sec</th>
                             <th>Index</th>
-                            <th>Time</th>
+                            <th>Day/Time</th>
                             <th>Location</th>
                             <th>Instructor</th>
                             <th class="status-header">Status</th>
@@ -86,7 +86,7 @@
                             </td>
                         </tr>
                     </tbody>
-                </table>    
+                </table>
             </div>
         </div>
         <div class="column-right divider">
@@ -119,7 +119,7 @@
                             <input type="radio" name="new-rating" value="3" required/>
                             <span class="icon"><i class="fas fa-star"></i></span>
                             <span class="icon"><i class="fas fa-star"></i></span>
-                            <span class="icon"><i class="fas fa-star"></i></span>   
+                            <span class="icon"><i class="fas fa-star"></i></span>
                         </label>
                         <label>
                             <input type="radio" name="new-rating" value="4" required/>
@@ -146,8 +146,8 @@
             <div class="class-comments">
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -163,8 +163,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -180,8 +180,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -197,8 +197,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -214,8 +214,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -231,8 +231,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -248,8 +248,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -265,8 +265,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -282,8 +282,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -299,8 +299,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -316,8 +316,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
@@ -333,8 +333,8 @@
                 </div>
                 <div class="comment">
                     <div class="comment-text">
-                        <p>despicationes et proident non ex exquisitaque probant offendit commodo 
-                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                        <p>despicationes et proident non ex exquisitaque probant offendit commodo
+                        reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in
                         fabulas quae iudicem qui sint doctrina ipsum enim</p>
                     </div>
                     <div class="comment-metadata">
