--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -34,7 +34,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Sign In</h5>
+                    <h5 class="modal-title">Log In</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -43,7 +43,7 @@
                     <form id="login" method="post" action="/login" class="navform">
                         <input class="smooth-input" type="text"  name="username" placeholder="Username" required><br>
                         <input class="smooth-input" type="password" name="password" placeholder="Password" required><br>
-                        <button type="submit" class="btn">Login</button>
+                        <button type="submit" class="btn">Log In</button>
                     </form>
                 </div>
             </div>
