--- a/public/css/account.css
+++ b/public/css/account.css
@@ -31,7 +31,7 @@
 
 .modal-body {
     padding: 2em;
-    
+
 }
 .modal-content semester {
     width: 50%;
@@ -85,12 +85,12 @@
 }
 
 .save-button {
-    height 60%;
+    height: 60%;
     display: none;
 }
 
 .cancel-button {
-    height 60%;
+    height: 60%;
 }
 
 /* loading.io loading icon*/
@@ -145,7 +145,7 @@ h5 {
 
 h6 {
     font-size: 1.1em;
-    font-weight: 400
+    font-weight: 400;
 }
 
 p {
@@ -159,8 +159,9 @@ p {
 }
 
 .tut-aside {
-    flex-grow: 1;
-    text-align: center;
+    flex-basis: 100%;
+    display: flex;
+    padding-left: 10%;
 }
 
 .modal-title {
@@ -175,11 +176,11 @@ p {
         width: 100%;
         display: block;
     }
-    
+
     .upload {
         padding: 0 1em;
     }
-    
+
     .semester {
         width: 50%;
         padding-right: 0;
@@ -191,7 +192,7 @@ p {
     .upload {
         padding: 1em;
     }
-    
+
     .semester {
         text-align: center;
         width: 100%;
@@ -200,7 +201,7 @@ p {
     .username-header {
         text-align: center;
     }
-  
+
     .semester ul {
         width: 70%;
         margin: auto;
