--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -61,24 +61,29 @@
                         <h5>Manually enter your completed courses here. Use this format when entering your coursework or else it will not save properly. </h5> <br>
                         <div class="modal-tutorial">
                             <div class="tut-aside">
-                                <h6>Semester Name</h6>
-                                <p>
-                                    -1:111:111 <br>
-                                    -2:222:222 <br>
-                                    -3:333:333 <br>
-                                    -4:444:444 <br>
-                                    -5:555:555 <br>
-                                </p>
+                                <div>
+                                    <h6>Template</h6>
+                                    <p>
+                                        Semester Name <br>
+                                        -1:111:111 <br>
+                                        -2:222:222 <br>
+                                        Semester Name <br>
+                                        -3:333:333 <br>
+                                        -4:444:444 <br>
+                                    </p>
+                                </div>
                             </div>
                             <div class="tut-aside">
-                                <h6>Example</h6>
-                                <p>
-                                    Spring 2018 <br>
-                                    -33:010:272 <br>
-                                    Fall 2019 <br>
-                                    -33:010:451 <br>
-                                    -01:013:192
-                                </p>
+                                <div>
+                                    <h6>Example</h6>
+                                    <p>
+                                        Spring 2018 <br>
+                                        -33:010:272 <br>
+                                        Fall 2019 <br>
+                                        -33:010:451 <br>
+                                        -01:013:192
+                                    </p>
+                                </div>
                             </div>
                         </div>
                         <form action="account.html" method="post" enctype="multipart/form-data" id="upload-form">
